--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/marsmeshed/my-tech-blog-14#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "env": "^0.0.2",
